--- a/applications/dashboard/scss/legacy/_admin.scss
+++ b/applications/dashboard/scss/legacy/_admin.scss
@@ -846,7 +846,7 @@ table {
       left: 0;
       right: 0;
       bottom: 0;
-      border: solid 1px $border-color;
+      border: solid 1px $icon-border-color;
       border-radius: $thumbnail-border-radius;
     }
   }
@@ -2015,6 +2015,15 @@ div.Summary table tbody td {
 .meta {
   font-size: $meta-font-size;
   color: $meta-color;
+
+  a {
+    color: inherit;
+
+    &:hover {
+      color: $link-hover-color;
+      text-decoration: underline;
+    }
+  }
 }
 
 .Pager {
@@ -2486,13 +2495,6 @@ div.InformMessages div.InformMessage a.Icon {
 div.InformMessages div.InformMessage a.Icon img {
   height: 28px;
   width: 28px;
-}
-
-/* Plugins */
-.PluginIcon {
-  display: block;
-  height: 50px;
-  width: 50px;
 }
 
 /* Getting Started Screen */
