--- a/applications/dashboard/scss/legacy/_admin.scss
+++ b/applications/dashboard/scss/legacy/_admin.scss
@@ -31,23 +31,8 @@ Welcome to the Admin CSS File! Some things you should know:
   min-width: 65px;
 }
 
-html {
-  box-sizing: border-box;
-  font-size: $font-size-root;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 /* ================================================================ Reset CSS */
-body, div, span, applet, object, iframe,
+html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
@@ -65,6 +50,18 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   font-family: inherit;
   vertical-align: baseline;
 }
+
+html {
+  box-sizing: border-box;
+  font-size: $font-size-root / 16px * 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 
 /* remember to define focus styles! */
 :focus {
